BUGFIX: Remove an overflow hidden delcaration for the ToggablePanel component

--- a/packages/react-ui-components/src/ToggablePanel/style.css
+++ b/packages/react-ui-components/src/ToggablePanel/style.css
@@ -1,10 +1,6 @@
 .panel {
     composes: reset from './../reset.css';
     position: relative;
-
-    > div {
-        overflow: hidden;
-    }
 }
 .panel__headline {
     composes: reset from './../reset.css';
